# rtl-gen-aii

./: .coverage  .dockerignore  .env.example  .gitignore  .readthedocs.yaml  00_VERIFICATION_COMPLETE.md  00_WAVEFORM_PHASE2_COMPLETE.md  00_YOSYS_AND_SYNTHESIS_COMPLETE.md  ADDING_NEW_FEATURES.md  AGENT_CONTEXT.md  API_KEY_SECURITY.md  AUDIT_FIX_REPORT_v2.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_SETUP_COMMANDS.md  BETA_PERIOD_SUMMARY.md  BRUTAL_CODE_AUDIT_REPORT.md  BUGS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLOUD_DEPLOYMENT_COMPLETE.md  CLOUD_DEPLOYMENT_QUICKSTART.md  CLOUD_INTEGRATION_GUIDE.md  CODE_EXTRACTION_FIX.md  COMPLETE_DESIGN_FLOW_GUIDE.md  COMPLETE_INSTALLATION_GUIDE.md  COMPLETE_PROJECT_AUDIT.md  COMPREHENSIVE_BUILD_STATUS_REPORT.md  CONTRIBUTING.md  COUNTER_STREAMLIT_COMPLETE.md  CRITICAL_ISSUES_RESOLUTION.md  CURRENT_STATUS.md  CUSTOMER_LAUNCH_KIT.md  DAYS_27-29_COMPLETION.md  DAYS_34_35_IMPLEMENTATION_SUMMARY.md  DAY_33_COMPLETION.md  DAY_34_COMPLETION.md  DAY_38_COMPLETION.md  DAY_39_COMPLETION.md  DAY_40_COMPLETION.md  DAY_41_COMPLETION.md  (+380 more)
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh  setup.sh
.gsd/: ARCHITECTURE.md  DEBUG.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md
.streamlit/: config.toml
DEPLOYMENT/: index.html
FINE_TUNING_GUIDE/: index.html
PREVENTION_POLICY/: index.html
YOSYS_SETUP_GUIDE/: index.html
api/: index.html
app_final/: app.py
backups/: rtl_gen_ai_backup_20260319_131013.tar.json
coverage_work/: coverage_report_20260319_144550.md  coverage_report_20260319_144726.md  coverage_report_20260319_145809.md  coverage_report_20260319_145824.md  coverage_report_20260319_145911.md  coverage_report_20260319_150112.md  coverage_report_20260319_150129.md
design_flow_output/: complete_design_flow.html  dashboard.html
docs/: API_REFERENCE.md  DEPLOYMENT.md  FINE_TUNING_GUIDE.md  PREVENTION_POLICY.md  SYNTHESIS_GUIDE.md  USER_GUIDE.md  WAVEFORM_GUIDE.md  YOSYS_SETUP_GUIDE.md  api.md  examples.md  index.md  quickstart.md
evaluation_results/: test_model_20260319_134729.json
examples/: adder_4bit.v  adder_4bit_tb.v  counter_4bit.v  counter_4bit_tb.v  counter_8bit.v  index.html  mux_4to1.v
logs/: token_usage.json
model-selection-playbook/: index.html
outputs/: adder_16bit.v  adder_4bit.v  adder_8bit.v  adder_8bit_netlist_mock.verilog  adder_8bit_tb.gtkw  alu_8bit_netlist_mock.verilog  alu_8bit_tb.gtkw  counter_tb.gtkw  detail_router.py  full_flow.py  gds_generator.py  global_router.py  routing_optimizer.py  signoff_checker.py  tapeout_packager.py  test_adder.v  test_phase3.py  test_phase4.py
pages/: 00_🏠_Home.py  01_✏️_Custom_Design.py  04_Physical_Design_Flow.py  05_🎯_Results.py  06_🔄_Workflow.py  1_📜_History.py  2_📖_Documentation.py  3_AI_Code_Generation.py
parsers/: __init__.py  congestion_parser.py  drc_parser.py  lvs_parser.py  metrics_parser.py  power_parser.py  sta_parser.py
phase1_evidence/: PHASE1_COMPLETION_REPORT_20260418.md  PHASE2_TO_PHASE5_COMPLETION_REPORT_20260418.md  app.py.txt  database.py.txt  design_adder_8bit_tb_v.txt  design_adder_8bit_v.txt  design_counter_4bit_tb_v.txt  design_counter_4bit_v.txt  docker_ps.txt  env_keys_present.txt  full_flow.py.txt  generate_wpi_report.py.txt  git_log_15.txt  git_status.txt  latest_run_listing.txt  openlane_critical_sizes.txt  openlane_results_listing.txt  openlane_runs_index_table.txt  openlane_runs_listing.txt  postgres_design_runs_count.txt  postgres_dt.txt  postgres_tables_and_count.txt  project_tree_filesizes.txt  python_db_check.txt  results_link_info.txt  tests_test_database.py.txt  tests_test_real_integration.py.txt  tests_test_unit.py.txt  unit_pass_fail_extract.txt  verilog_generator.py.txt
pwm_test_outputs/: pwm_files.list  pwm_sim
python/: __init__.py  __main__.py  advanced_prompt_builder.py  advanced_simulation.py  area_analyzer.py  assertion_generator.py  batch_processor.py  cache_manager.py  cli.py  code_extractor.py  code_formatter.py  compilation_manager.py  complete_design_flow.py  comprehensive_integration_test.py  config.py  context_manager.py  conversation_memory.py  coverage_analyzer.py  coverage_generator.py  cts_engine.py  database.py  dataset_augmenter.py  dataset_manager.py  dataset_validator.py  deployment_automation.py  design_flow.py  design_flow_generator.py  detail_router.py  die_estimator.py  docker_manager.py  enhanced_visualizer.py  error_handler.py  error_tracker.py  extraction_pipeline.py  finetuning_formatter.py  fix_pdk_synthesis.py  floorplanner.py  formal_verification.py  full_flow.py  full_flow.py.synth_bak  (+59 more)
quickstart/: index.html
(+724 files in other folders)
