[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl-gen-aii"
version = "1.0.0"
description = "AI-powered system for converting natural language to verified SystemVerilog RTL code"
authors = [
    { name = "RTL-Gen AI Team", email = "team@rtl-gen-ai.dev" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "psutil>=5.9.8",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "click>=8.1.7",
    "gdspy>=2.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "pylint>=3.1.0",
]

[project.scripts]
rtl-gen = "python.__main__:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
python_files = "test_*.py"

[tool.coverage.run]
source = ["python"]
omit = ["tests/*"]
